--- a/Index.html
+++ b/Index.html
@@ -129,7 +129,7 @@
     <h2>Certifications</h2>
     <ul>
       <li><strong>Certified Project Management Professional (PMP)</strong> - [Year]</li>
-      <li><strong>Certified Electrical Engineer (CEE)</strong> - [Year]</li>
+      <li><strong>Certified Vibration analysis (Cat III)</strong> - [Year]</li>
     </ul>
   </div>
 
