--- a/Index.html
+++ b/Index.html
@@ -1,148 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>RANDRIANARIJAONA Mahasetra Mikaela - CV</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      background-color: #f4f7fa;
-      color: #333;
-    }
-    header {
-      background-color: #4CAF50;
-      color: white;
-      padding: 20px;
-      text-align: center;
-    }
-    .container {
-      width: 80%;
-      margin: 0 auto;
-      padding: 30px 0;
-    }
-    .profile {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-    .profile img {
-      border-radius: 50%;
-      width: 150px;
-      height: 150px;
-    }
-    h1 {
-      margin-top: 10px;
-      color: #333;
-    }
-    h3 {
-      margin-top: 5px;
-      color: #555;
-    }
-    .section {
-      margin-bottom: 30px;
-    }
-    .section h2 {
-      color: #4CAF50;
-      border-bottom: 2px solid #4CAF50;
-      padding-bottom: 10px;
-    }
-    .section ul {
-      list-style: none;
-      padding: 0;
-    }
-    .section ul li {
-      margin-bottom: 10px;
-    }
-    footer {
-      background-color: #333;
-      color: white;
-      text-align: center;
-      padding: 15px;
-      margin-top: 40px;
-    }
-    .button {
-      display: inline-block;
-      padding: 10px 20px;
-      background-color: #4CAF50;
-      color: white;
-      text-decoration: none;
-      border-radius: 5px;
-      margin-top: 20px;
-    }
-    .button:hover {
-      background-color: #45a049;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>History of the U.S. Fulbright Program</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+            color: #333;
+        }
+        header {
+            background-color: #004b87;
+            color: white;
+            text-align: center;
+            padding: 20px;
+        }
+        .container {
+            width: 80%;
+            margin: 20px auto;
+            padding: 20px;
+            background-color: white;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        h1, h2 {
+            color: #004b87;
+        }
+        p {
+            line-height: 1.6;
+        }
+    </style>
 </head>
 <body>
 
 <header>
-  <h1>RANDRIANARIJAONA Mahasetra Mikaela</h1>
-  <h3>Double Master's in Electrical Engineering and MBA</h3>
+    <h1>History of the U.S. Fulbright Program</h1>
 </header>
 
 <div class="container">
-  <div class="profile">
-    <!-- You can replace this image with your own image file -->
-    <img src="https://placekitten.com/150/150" alt="Your Photo">
-    <p>Email: mikaela@email.com</p>
-    <p>Phone: +261 34 29 754 09</p>
-    <p>Location: Antananarivo, Madagascar</p>
-  </div>
+    <h2>Introduction</h2>
+    <p>The Fulbright Program is a prestigious educational exchange initiative established by the U.S. government to foster mutual understanding between the people of the United States and other nations. The program offers opportunities for students, scholars, and professionals to engage in cross-cultural exchange, facilitating global cooperation and collaboration.</p>
 
-  <!-- Education Section -->
-  <div class="section">
-    <h2>Education</h2>
-    <ul>
-      <li><strong>Master's in Electrical Engineering</strong> - [University Name], [Year]</li>
-      <li><strong>Master's in Business Administration (MBA)</strong> - [University Name], [Year]</li>
-    </ul>
-  </div>
+    <h2>Origins</h2>
+    <p>The Fulbright Program was created in 1946 through the vision of Senator J. William Fulbright. After World War II, Fulbright proposed a plan to use the proceeds from U.S. war-surplus goods to fund educational exchange programs, allowing young Americans and people from other countries to study, teach, and share ideas in an effort to build peace and international understanding.</p>
 
-  <!-- Skills Section -->
-  <div class="section">
-    <h2>Skills</h2>
-    <ul>
-      <li>Electrical Circuit Design</li>
-      <li>Project Management</li>
-      <li>Business Strategy and Analysis</li>
-      <li>Data Analytics</li>
-      <li>Leadership and Team Management</li>
-    </ul>
-  </div>
+    <h2>The First Fulbright Exchange</h2>
+    <p>The first exchange program began in 1948 with the establishment of the Fulbright scholarship for students and professionals. The initial focus was on fostering academic and cultural exchange between the United States and Europe, but it quickly expanded globally to include over 160 countries.</p>
 
-  <!-- Experience Section -->
-  <div class="section">
-    <h2>Professional Experience</h2>
-    <ul>
-      <li><strong>Electrical Engineer</strong> - [Company Name], [Year] - [Year]</li>
-      <li><strong>Project Manager</strong> - [Company Name], [Year] - [Year]</li>
-      <li><strong>Business Analyst Intern</strong> - [Company Name], [Year] - [Year]</li>
-    </ul>
-  </div>
+    <h2>Impact and Legacy</h2>
+    <p>Since its inception, the Fulbright Program has provided millions of people with the opportunity to gain international experience. Many prominent leaders, academics, and artists have participated in the program, contributing significantly to diplomacy, global research, and the arts. The program's influence continues to thrive today, with over 8,000 grants awarded annually in various categories such as study, teaching, and research.</p>
 
-  <!-- Certifications Section -->
-  <div class="section">
-    <h2>Certifications</h2>
-    <ul>
-      <li><strong>Certified Project Management Professional (PMP)</strong> - [Year]</li>
-      <li><strong>Certified Vibration analysis (Cat III)</strong> - [Year]</li>
-    </ul>
-  </div>
-
-  <!-- Contact Section -->
-  <div class="section">
-    <h2>Contact Me</h2>
-    <p>If you'd like to get in touch, feel free to <a href="mailto:mikaela@email.com" class="button">Email Me</a></p>
-  </div>
+    <h2>Conclusion</h2>
+    <p>The U.S. Fulbright Program remains one of the most successful educational exchange programs in the world, helping bridge gaps between cultures and creating lasting connections that continue to foster peace, academic excellence, and global understanding.</p>
 </div>
-
-<footer>
-  <p>&copy; 2025 RANDRIANARIJAONA Mahasetra Mikaela. All Rights Reserved.</p>
-</footer>
 
 </body>
 </html>
